# luacppinterface

./: .gitignore  CMakeLists.txt  README.md
src/: luacppinclude.h  luatypetemplates.h
tests/: demonstration2.cpp  luacpp.cpp  testwidetocharconvert.cpp
